Incrementing the heap during the maven compilation