@@ -29,6 +29,10 @@
 					</execution>
 				</executions>
 				<configuration>
+					<argLine>-Xmx1024m</argLine>
+ 					  <argLine>-Xms1024m</argLine>
+					  <argLine>-XX:PermSize=512m</argLine>
+ 					  <argLine>-XX:MaxPermSize=1024m</argLine>
 					<includeProjectDependencies>false</includeProjectDependencies>
 					<includePluginDependencies>true</includePluginDependencies>
 					<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
